--- a/index.html
+++ b/index.html
@@ -1,34 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <title>CV</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>The Booleaner</title>
 </head>
 
 <body>
-  <header>
-   <!-- BARRA LAYOUT -->
-    <!-- TITOLO E SOTTOTITOLO -->
-  </header>
+    <!-- Banner in alto -->
+    <header>
+        <div id="banner">
+            <img src="img/logo.svg" alt="logo banner" id="logoBanner">
+        </div>
+    </header>
 
-  <main>
-    <section>
-      <!-- FOTO  E TESTO-->
-    </section>
+    <main>
+        <!-- titolo, autore e data -->
+        <div id="titleautordata">
+            <h1>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, voluptates?
+            </h1>
+            <h5>
+              Scritto da <a href="https://www.twitch.tv/alematri">Booleaner</a>
+             <br>
+              il 14/02/2023
+            </h5>
+        </div>
+        <!-- foto Tim -->
+        <img src="img/tim-1.jpg" alt="tim1">
+        <img src="img/tim-2.jpg" alt="tim2">
+        <!-- descrizione foto  -->
+        <h5 class="descrizionefoto"> 
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, sed!
+            <br>
+            Lorem ipsum dolor sit.
+        </h5>
 
-    <section>
-      <!-- TESTO E OL -->
-    </section>
+        <!-- sezione 1 articolo -->
+        <section>
+            <p id="articolo">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores possimus iste eveniet, inventore ratione earum nulla tenetur itaque, beatae reprehenderit dignissimos. Modi molestias laboriosam, omnis sunt, nemo dolorem, fugiat quibusdam pariatur ab natus sed consequuntur ratione nulla. Doloribus minima soluta praesentium itaque<span class="evidenziato"> recusandae optio laborum consequuntur magnam repellendus corrupti quidem, adipisci quam dolorum </span>eveniet saepe mollitia possimus laboriosam molestias voluptatum eos similique. Omnis sint facilis architecto pariatur, reiciendis cupiditate voluptatem natus amet. Officia numquam, est iste ad minus eveniet accusamus nihil beatae, fuga culpa libero eaque tempora! Totam molestiae et, veritatis repellat vel ipsum odio aspernatur facilis amet officia iure exercitationem corrupti possimus, necessitatibus reprehenderit dolor. Quos veniam deleniti libero autem, quod facilis magnam velit corrupti maiores atque natus temporibus quidem magni dicta eius laborum minima laudantium beatae. Ad aperiam nobis, unde dolore dolor cumque incidunt, facere deserunt inventore possimus porro quasi atque error iusto veritatis mollitia officia provident architecto debitis veniam quos temporibus ipsa. Quod, molestias accusantium quis similique doloribus blanditiis saepe eaque. Inventore delectus excepturi consequatur? Nam modi, expedita culpa nostrum illum pariatur perspiciatis incidunt nisi qui amet minima voluptas voluptatibus. At quia velit quos, facere inventore possimus fugit corrupti ratione eos totam repellat? Eveniet nam maxime dignissimos.
+            </p>
+            <!-- lista -->
+            <ul>
+                <li>Lorem ipsum dolor sit amet <span      class="evidenziato">consectetur adipisicing</span> elit.    Incidunt consectetur quam aliquid volupt
+                </li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt consectetur quam aliquid volupt</li>
+            </ul>
 
-    <section>
-      <!-- TABELLA -->
-    </section>
-  </main>
+            <!-- tabella -->
+            <table>
+                <tr id="headertab">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                </tr>
 
-  <footer>
-    <!-- TESTO E IMMAGINI -->
-  </footer>
+                <tr class="topebottomrow">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, enim nobis non dicta molestias architecto sed illum placeat asperiores sequi ullam atque neque autem voluptate reprehenderit animi ab culpa ipsum?</td>
+                </tr>
 
+                <tr class="midrow">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam, ex! Dolorum a consectetur hic veniam, nemo fuga repellendus itaque necessitatibus nobis delectus alias inventore sit suscipit similique! Accusantium, in voluptatum.</td>
+                </tr>
+
+                <tr class="topebottomrow">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, et. Quod, dignissimos modi. Placeat eaque dolorem, repellendus expedita officiis asperiores incidunt illum sint unde eius reprehenderit consequuntur necessitatibus distinctio voluptatem.</td>
+                </tr>
+            </table>
+        </section>
+    </main>
+    
+    <!-- footer con immagini -->
+    <footer>
+        <h3>Potrebbero interessarti</h3>
+
+        <div class="imgfooter" id="firstfooter">
+          <h4>Lorem ipsum dolor</h4>
+        </div>
+
+        <div class="imgfooter" id="secondfooter">
+          <h4>Lorem ipsum dolor</h4>
+        </div>
+
+    </footer>
 </body>
+</html>
