Corretto con bonus

--- a/index.html
+++ b/index.html
@@ -11,85 +11,103 @@
 <body>
     <!-- Banner in alto -->
     <header>
-        <div id="banner">
-            <img src="img/logo.svg" alt="logo banner" id="logoBanner">
+        <div class="container">
+            <div class="logo">
+            <img src="img/logo.svg" alt="logo">
+            </div>
         </div>
     </header>
 
-    <main>
+    <main class="container">
         <!-- titolo, autore e data -->
-        <div id="titleautordata">
-            <h1>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, voluptates?
-            </h1>
-            <h5>
-              Scritto da <a href="https://www.twitch.tv/alematri">Booleaner</a>
-             <br>
-              il 14/02/2023
-            </h5>
+         <h1>
+             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi,voluptates?
+         </h1>
+         <div class="dida">
+             <p>Scritto da <span class="name">Booleaner</span></p>
+             <span>14/02/2023</span>
+         </div>
+
+        <div class="photo">
+            <img src="img/tim-1.jpg" alt="Tim1">
+            <img src="img/tim-2.jpg" alt="Tim2">
+            <div class="caption">
+                <span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, quae. <br>
+                    Lorem ipsum dolor sit amet.
+                </span>
+            </div>
         </div>
-        <!-- foto Tim -->
-        <img src="img/tim-1.jpg" alt="tim1">
-        <img src="img/tim-2.jpg" alt="tim2">
-        <!-- descrizione foto  -->
-        <h5 class="descrizionefoto"> 
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, sed!
-            <br>
-            Lorem ipsum dolor sit.
-        </h5>
 
-        <!-- sezione 1 articolo -->
-        <section>
-            <p id="articolo">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores possimus iste eveniet, inventore ratione earum nulla tenetur itaque, beatae reprehenderit dignissimos. Modi molestias laboriosam, omnis sunt, nemo dolorem, fugiat quibusdam pariatur ab natus sed consequuntur ratione nulla. Doloribus minima soluta praesentium itaque<span class="evidenziato"> recusandae optio laborum consequuntur magnam repellendus corrupti quidem, adipisci quam dolorum </span>eveniet saepe mollitia possimus laboriosam molestias voluptatum eos similique. Omnis sint facilis architecto pariatur, reiciendis cupiditate voluptatem natus amet. Officia numquam, est iste ad minus eveniet accusamus nihil beatae, fuga culpa libero eaque tempora! Totam molestiae et, veritatis repellat vel ipsum odio aspernatur facilis amet officia iure exercitationem corrupti possimus, necessitatibus reprehenderit dolor. Quos veniam deleniti libero autem, quod facilis magnam velit corrupti maiores atque natus temporibus quidem magni dicta eius laborum minima laudantium beatae. Ad aperiam nobis, unde dolore dolor cumque incidunt, facere deserunt inventore possimus porro quasi atque error iusto veritatis mollitia officia provident architecto debitis veniam quos temporibus ipsa. Quod, molestias accusantium quis similique doloribus blanditiis saepe eaque. Inventore delectus excepturi consequatur? Nam modi, expedita culpa nostrum illum pariatur perspiciatis incidunt nisi qui amet minima voluptas voluptatibus. At quia velit quos, facere inventore possimus fugit corrupti ratione eos totam repellat? Eveniet nam maxime dignissimos.
-            </p>
-            <!-- lista -->
-            <ul>
-                <li>Lorem ipsum dolor sit amet <span      class="evidenziato">consectetur adipisicing</span> elit.    Incidunt consectetur quam aliquid volupt
-                </li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt consectetur quam aliquid volupt</li>
-            </ul>
+        <div class="main-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium necessitatibus minima doloribus quos fugiat aut consectetur, veniam nostrum excepturi autem facilis odit itaque, magni ipsam quasi recusandae architecto corporis placeat? Soluta maiores error doloribus, culpa aut tempore, doloremque architecto amet provident qui ex laboriosam vero neque ea quos. Maxime iure voluptate mollitia minima doloremque repudiandae! Vel amet impedit nobis maiores, illo rem explicabo. Enim ullam et dolorum, delectus nostrum tenetur minus, eum, quo perferendis reprehenderit maxime quis. Molestias et labore <span class="evidenziatore"> cumque repellat, optio minus? Perferendis impedit nulla ratione amet alias consequatur debitis </span> reiciendis beatae sed in cum aut, doloremque asperiores illum id et magnam assumenda atque cupiditate odio quia incidunt dignissimos? Perspiciatis hic quae dicta veniam. Eveniet explicabo facere corrupti tenetur possimus porro laboriosam consectetur, a nisi minima qui deleniti exercitationem cum assumenda ab nemo necessitatibus. Aspernatur iste debitis cupiditate iusto fuga dicta odio beatae voluptatum, illum atque ipsum sit sint officiis deleniti eum facilis. Ipsa nulla repellat distinctio similique ducimus facilis blanditiis inventore est quo ex. Laudantium distinctio, laborum, a recusandae modi, placeat commodi quidem quaerat quia veniam rem quae. Aperiam quam officia aspernatur debitis, natus inventore sed dicta laudantium dolorum consequatur odit, aut voluptas temporibus error suscipit harum!
+        </div>
 
-            <!-- tabella -->
-            <table>
-                <tr id="headertab">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
+        <ul>
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio repudiandae nihil deserunt corporis totam eius? Harum corrupti accusamus quisquam repudiandae!
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio repudiandae <span class="evidenziatore"> nihil deserunt corporis </span>
+                totam eius? Harum corrupti accusamus quisquam repudiandae!
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio repudiandae nihil <span class="evidenziatore"> deserunt corporis totam eius? </span> Harum corrupti accusamus quisquam repudiandae!
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio repudiandae nihil deserunt corporis totam eius? Harum corrupti accusamus quisquam repudiandae!
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio repudiandae nihil deserunt corporis totam eius? Harum corrupti accusamus quisquam repudiandae!
+            </li>
+        </ul>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem, ipsum dolor.</th>
+                    <th>Lorem, ipsum dolor.</th>
+                    <th class="text">Lorem, ipsum dolor</th>    
                 </tr>
+            </thead>
 
-                <tr class="topebottomrow">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, enim nobis non dicta molestias architecto sed illum placeat asperiores sequi ullam atque neque autem voluptate reprehenderit animi ab culpa ipsum?</td>
+            <tbody>
+                <tr class="odd">
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio incidunt ipsa cum, eligendi soluta pariatur? Nisi veniam laborum blanditiis delectus, hic odio debitis obcaecati vel amet, expedita beatae, ipsam eum.</td>
                 </tr>
+            </tbody>
 
-                <tr class="midrow">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam, ex! Dolorum a consectetur hic veniam, nemo fuga repellendus itaque necessitatibus nobis delectus alias inventore sit suscipit similique! Accusantium, in voluptatum.</td>
+            <tbody>
+                <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio incidunt ipsa cum, eligendi soluta pariatur? Nisi veniam laborum blanditiis delectus, hic odio debitis obcaecati vel amet, expedita beatae, ipsam eum.</td>
                 </tr>
+            </tbody>
 
-                <tr class="topebottomrow">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, et. Quod, dignissimos modi. Placeat eaque dolorem, repellendus expedita officiis asperiores incidunt illum sint unde eius reprehenderit consequuntur necessitatibus distinctio voluptatem.</td>
+            <tbody>
+                <tr class="odd">
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio incidunt ipsa cum, eligendi soluta pariatur? Nisi veniam laborum blanditiis delectus, hic odio debitis obcaecati vel amet, expedita beatae, ipsam eum.</td>
                 </tr>
-            </table>
-        </section>
+            </tbody>
+        </table>
+
     </main>
     
     <!-- footer con immagini -->
-    <footer>
-        <h3>Potrebbero interessarti</h3>
+    <footer class="container">
+        <h4>Potrebber interessarti</h4>
 
-        <div class="imgfooter" id="firstfooter">
-          <h4>Lorem ipsum dolor</h4>
+        <div class="image-box" id="monitor">
+            <h3>Lorem, ipsum.</h3>
         </div>
 
-        <div class="imgfooter" id="secondfooter">
-          <h4>Lorem ipsum dolor</h4>
+        <div class="image-box" id="graph">
+            <h3>Lorem Ipsum</h3>
         </div>
 
     </footer>
